# futhark

./: .ghci  .gitattributes  .gitignore  .gitmodules  .hlint.yaml  .mailmap  .readthedocs.yaml  .travis-setup.sh  .travis.yml  .travis_rsa.enc  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  LICENSE  Makefile  README.md  Redomap_files.txt  STYLE.md  Setup.hs  appveyor.yml  azure-pipelines.yml  benchmark_verify.sh  cabal.project  cabal.project.freeze  cc.sh  channels.scm  clean.sh  default.nix  errors.md  flake.nix  futhark.cabal  futhark.nix  futhark.scm  hl-sched-modifs.txt  l0-ghci.sh  l0c.cabal  liquid.hs  missing.md  (+25 more)
artifact_tools/: benchmark_verify.py
benchmarks/: README.md  futhark_benchmarks.hs
ci/: integration-tests.sh  library-tests.sh  package-tests.sh  style-check.sh  unit-tests.sh
data/: 99bottles.l0  BabyBear.l0  BabyBear.out  CalibLexiFi.l0  CalibLexiFi.out  HiperfitEgCos.l0  HiperfitEgCos.out  HiperfitExample1.l0  HiperfitExample1.out  MSSP.l0  MSSP.out  MatMult.in  MatMult.l0  MatMult.out  PricingLexiFi.l0  PricingLexiFi.out  Runtests.hs  TRIDAG.l0  TRIDAG.out  concat.l0  concat.out  copyPropTest1.l0  copyPropTest1.out  copyPropTest2.l0  copyPropTest2.out  copyPropTest3.l0  copyPropTest3.out  deadCodeElimTest1.l0  deadCodeElimTest2.l0  deadCodeElimTest2.out  do-loop.l0  do-loop.out  fib.l0  fibfun.l0  fibfun.out  filter1.l0  filter1.out  inlineTest.out  inlineTest1.l0  loop1.l0  (+96 more)
doc/: .gitignore  BBL.txt  ad-loop-constant-result-bug.md  fhpc13-paper-divergence.txt  futhark.tex  ideas.md  l0.tex  scan-neutral-removal.md
docs/: .gitignore  Makefile  binary-data-format.rst  c-api.rst  c-porting-guide.rst  conf.py  default.nix  error-index.rst  glossary.rst  hacking.rst  index.rst  installation.rst  js-api.rst  language-overview.rst  language-reference.rst  manifest.schema.json  package-management.rst  performance.rst  publications.rst  report.schema.json  requirements.txt  server-protocol.rst  uniqueness-types.rst  usage.rst  versus-other-languages.rst  windows-installation.rst
examples/: .gitignore  README.md  gauss_jordan.fut  linear_solve.fut  lotka_volterra.fut  lss.fut  mss.fut  perceptron.fut  quickmedian.fut  quickselect.fut
futlib/: STYLE.md  array.fut  colour.fut  complex.fut  date.fut  fft.fut  functional.fut  linalg.fut  lss.fut  math.fut  merge_sort.fut  monoid.fut  mss.fut  numeric.fut  prelude.fut  radix_sort.fut  random.fut  rational.fut  sandbox.fut  segmented.fut  soacs.fut  sobol-dir-1000.fut  sobol-dir-21201.fut  sobol-dir-50.fut  sobol.fut  vec2.fut  vec3.fut  vector.fut  zip.fut
git-hooks/: pre-commit
language-wgsl/: CHANGELOG.md  LICENSE  language-wgsl.cabal
language-wgsl/src/Language/: WGSL.hs
libtests/: README.md
memory-block-merging/: .gitignore  README.md
nix/: config.nix  elfutils191.nix  flake.nix  futhark-data.nix  futhark-manifest.nix  futhark-server.nix  futhark.nix  gasp.nix  glpk-hs.nix  haskell-z3.nix  language-c-quote.nix  lsp-test.nix  lsp-types.nix  lsp.nix  oclgrind.nix  packages.nix  pkgs-style.nix  pkgs-test.nix  sexp-grammar.nix  shell.nix  sources.json  sources.nix  versions.nix  z3.nix  zlib.nix
pkgtests/: .gitignore  README.md  futhark.pkg.0  futhark.pkg.1  futhark.pkg.11  futhark.pkg.13  futhark.pkg.17  futhark.pkg.5  futhark.pkg.9  test.sh
prelude/: STYLE.md  ad.fut  array.fut  functional.fut  math.fut  prelude.fut  properties.fut  refinement.fut  soacs.fut  zip.fut
rewritefut/: segupdate.fut
rts/: README.md  style.css
sample_programs/: 100doors  100doors.c  Makefile  OptionPricing  OptionPricing.c  OptionPricing.fut  american_option  american_option.c  bfs_filt_padded_fused  bfs_filt_padded_fused.c  bfs_filt_padded_fused.fut  bfs_iter_work_ok  bfs_iter_work_ok.c  bfs_iter_work_ok.fut  colour.fut  common.fut  consumesInputs  consumesInputs.c  consumesInputs.fut  consumption2  consumption2.c  consumption2.fut  equiv  equiv.c  f4  f4.c  f4.fut  fft  fft.c  fft.fut  fourier  fourier.c  fourier.fut  fuse-across-reshape-transpose  fuse-across-reshape-transpose.c  fuse-across-transpose1  fuse-across-transpose1.c  fuseComplex1  fuseComplex1.c  fuseEasy3  (+88 more)
src/: Futhark.hs  Main.hs  futdoc.hs  futhark-bench.hs  futhark-c.hs  futhark-cs.hs  futhark-csopencl.hs  futhark-cuda.hs  futhark-dataset.hs  futhark-doc.hs  futhark-opencl.hs  futhark-pkg.hs  futhark-py.hs  futhark-pyopencl.hs  futhark-test.hs  futhark-vulkan.hs  futhark.hs  futharki.hs  l0ci.hs  main.hs  wrapper.hs
src-testing/: futhark_benchmarks.hs  futhark_tests.hs
temp_test_examples/: .gitkeep  filter  filter.c  filter.fut  filter.fut_gpu_mem  filter.fut_soacs  scan.fut  simple.fut_soacs  temp.c  temp.fut  temp.fut_soacs
tests/: .gitignore  .test_output.swp  BabyBearFun.fut  BabyBearImp.fut  README.md  VidarTest.hs  abs.fut  allocs.fut  american_option.fut  apply-or-index.fut  array14-running-example.fut  arrayInTupleArray.fut  arraylit.fut  arraylit1.fut  arraylit2.fut  arraylit3.fut  arraylit4.fut  ascription0.fut  ascription1.fut  ascription2.fut  ascription3.fut  ascription4.fut  assert0.fut  assert1.fut  assert2.fut  assert3.fut  assert4.fut  backtick.fut  bad-array-constant-error.fut  bad-reduce.fut  bad_names.fut  badentry0.fut  badentry1.fut  badentry10.fut  badentry11.fut  badentry2.fut  badentry3.fut  badentry4.fut  badentry5.fut  badentry6.fut  (+650 more)
tests_adhoc/: test.sh
tests_analysis/: .gitignore  bfast-All-EfSeq.fut  bfast-All-EfSeq.fut_gpu  double-dep.fut  fold.fut  fold.fut_gpu  indirect.fut  indirect.fut_gpu  indirect_indirect.fut  indirect_indirect.fut_gpu  indirect_inv.fut  indirect_inv.fut_gpu  indirect_iota.fut  indirect_iota_offs.fut  indirect_iota_offs.fut_gpu  indirect_uniform.fut  indirect_uniform.fut_gpu  inv.fut  inv.fut_gpu  inv_nested.fut  inv_nested.fut_gpu  inv_par.fut  inv_par.fut_gpu  inv_seq.fut  inv_seq.fut_gpu  inv_seq_loop.fut  let_multi.fut  let_multi.fut_gpu  local_array.fut  local_array.fut_gpu  loop.fut  loop.fut_gpu  manual-fold.fut  map-loop-map.fut  map-loop-map.fut_gpu  map.fut  map.fut_gpu  mat_vec_mul.fut  mat_vec_mul.fut_gpu  matmul-par.fut  (+51 more)
tests_fmt/: if.fut  (+19 more)
(+6480 files in other folders)
